[gd_scene load_steps=9 format=3 uid="uid://ctaps6qhxdhfh"]

[ext_resource type="Script" uid="uid://dsvr05ax0xehy" path="res://src/grid_battle/cell/cell.gd" id="1_318he"]
[ext_resource type="Texture2D" uid="uid://wmlwqdkb6y0q" path="res://assets/battlegrid/cell/cell.png" id="2_318he"]
[ext_resource type="Texture2D" uid="uid://cvfdj0bba7nt4" path="res://assets/battlegrid/cell/logic_simbols.png" id="3_qjmd4"]

[sub_resource type="Animation" id="Animation_ptwb3"]
length = 0.001

[sub_resource type="Animation" id="Animation_rk7pr"]
resource_name = "simbol"
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 7.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qjmd4"]
resource_name = "value"
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 12.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_br425"]
_data = {
&"RESET": SubResource("Animation_ptwb3"),
&"simbol": SubResource("Animation_rk7pr"),
&"value": SubResource("Animation_qjmd4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ij61"]

[node name="cell" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_318he")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../logic_simbol")
libraries = {
&"": SubResource("AnimationLibrary_br425")
}
autoplay = "value"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 5
visibility_layer = 5
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_0ij61")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_318he")
offset = Vector2(10, 12.5)
hframes = 2
frame = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="logic_simbol" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, 5)
texture = ExtResource("3_qjmd4")
hframes = 2

[node name="cell_area" type="Area2D" parent="."]
z_index = 1
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="cell_area"]
light_mask = 5
visibility_layer = 5
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_0ij61")

[connection signal="area_entered" from="cell_area" to="." method="_on_cell_area_entered"]
[connection signal="body_entered" from="cell_area" to="." method="_on_cell_body_entered"]
[connection signal="body_exited" from="cell_area" to="." method="_on_cell_body_exited"]
